--- a/templates/index.html
+++ b/templates/index.html
@@ -115,9 +115,9 @@ li a:hover {
           <a href="/recogniseEngine"><button class="button">Start Face Mask Detector</button></a>
       </div>
      <div class="item2">
-          <h1> Face Recogniser</h1>
-          <h2>Tool to Enable an Extra Layer of Secrity to your application through Face Recogition Tecnology.</h2>
-          <a href="/recogniseEngine"><button class="button">Start Face Authenticator</button></a>
+          <h1>Face Mask detector as a service</h1>
+          <h2>Demo to show how our face mask detector can be integrated with other systems to facilitate its efficient use</h2>
+          <a href="/implementation_part"><button class="button">Start Face Authenticator</button></a>
       </div>
 </div>
 
