--- a/templates/index.html
+++ b/templates/index.html
@@ -104,10 +104,9 @@ li a:hover {
      <div class="nav">
   <ul>
       <li><a class="active" href="#home">Home</a></li>
-       <li><a href="#news">Register</a></li>
+       <li><a href="/log">Log</a></li>
       <li><a href="#about">About</a></li>
   </ul>
-
  </div>
      <div class="item1">
           <h1> Face Mask Recogniser</h1>
